--- a/templates/fractal/css/stylesheet.scss
+++ b/templates/fractal/css/stylesheet.scss
@@ -799,6 +799,7 @@ select:focus
 
 #usr-nav-name
 {
+	position: relative;
 	.heex
 	{
 		transition: margin-right 0.25s;
@@ -806,8 +807,10 @@ select:focus
 		width: 5px;
 		height: 30px;
 		margin: 5px;
-    	margin-right: 10px;
-    	display: inline-block;
+    	margin-right: 20px;
+    	position: absolute;
+    	top: 0;
+    	right: 0;
     	background: $main-colour;
     	> div
 		{
@@ -844,7 +847,7 @@ select:focus
 
 #usr-nav-name:hover .heex
 {
-	margin-right: 0px;
+	margin-right: 10px;
 }
 
 #usr-nav hr {
