--- a/templates/fractal/css/stylesheet.scss.css
+++ b/templates/fractal/css/stylesheet.scss.css
@@ -95,6 +95,12 @@ select:focus {
   z-index: 1; }
 
 .hex {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   transition: padding-top 0.25s;
   transition-timing-function: cubil-bezier(0, 0.5, 1, 0.5);
   width: 60px;
@@ -259,21 +265,38 @@ select:focus {
 
 #wrapper {
   width: 80%;
-  padding-top: 20px;
-  min-height: calc(100% - 80px);
+  padding-top: 5px;
+  min-height: calc(100% - 420px);
+  /* Full height of the logo image and the footer */
   margin: 0 auto; }
 
 .welcome-img {
+  display: table;
+  width: 100%;
+  font-size: 100px;
+  color: white;
+  background-position: center 0;
+  background-repeat: no-repeat;
   border-bottom: 5px solid #088a08;
-  margin-bottom: 10px;
-  width: 100%; }
+  height: 350px;
+  margin: 0 auto; }
+  .welcome-img div {
+    width: 100%;
+    text-align: center;
+    display: table-cell;
+    height: 350px;
+    vertical-align: middle;
+    -webkit-text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+    -moz-text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+    -o-text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); }
 
 .breadcrumbs {
   float: left;
   color: #088a08;
   font-size: 1.1em;
   line-height: 2.2em;
-  padding-bottom: 20px; }
+  padding-bottom: 10px; }
 
 #big-wrapper > footer {
   width: 80%;
@@ -285,12 +308,30 @@ select:focus {
   max-height: 19px;
   text-align: center; }
 
+/*-----------------*/
+/* System messages */
+/*-----------------*/
+#system-message {
+  clear: both; }
+  #system-message > dd {
+    text-indent: 0; }
+  #system-message > .error > ul {
+    background-image: none;
+    border: none; }
+
+.error.message.fade {
+  list-style-type: none;
+  color: #000;
+  font-size: 14px;
+  font-weight: bold;
+  margin-left: 18px; }
+
 /*----------*/
 /* Articles */
 /*----------*/
 .search-box {
   float: right;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   font-size: 1.1em; }
 
 .article {
@@ -308,7 +349,9 @@ select:focus {
     overflow: hidden;
     font-size: 1.3em;
     line-height: 1.4em;
-    color: #333333; }
+    color: #333333;
+    text-indent: 25px;
+    padding-top: 1em; }
 
 .article-title {
   font-size: 1.5em;
@@ -336,14 +379,12 @@ select:focus {
 
 .modified {
   font-size: 1em;
-  padding-bottom: 10px;
   padding-top: 2px; }
 
 .article-info {
   display: block;
   font-size: 1em;
   line-height: 1.2em;
-  margin-bottom: 0.6em;
   padding-bottom: 5px; }
 
 .readmore {
@@ -449,7 +490,7 @@ select:focus {
     color: #088a08;
     font-weight: bold;
     font-size: 1.1em;
-    margin-bottom: 15px; }
+    margin: 15px 0 10px 0; }
   #adminForm .formelm {
     display: table-row; }
     #adminForm .formelm label {
