Stored (probably) all custom strings in a dictionary in Joomla!, moved images to more appropiate place, ignored some cache files

--- a/templates/fractal/css/stylesheet.scss
+++ b/templates/fractal/css/stylesheet.scss
@@ -22,6 +22,14 @@ $main-colour: #088A08;
 	text-shadow: $shadow;
 }
 
+@mixin text-shadow2($shadow, $shadow1)
+{
+	-webkit-text-shadow: $shadow, $shadow1;
+	-moz-text-shadow: $shadow, $shadow1;
+	-o-text-shadow: $shadow, $shadow1;
+	text-shadow: $shadow, $shadow1;
+}
+
 @mixin user-select($select)
 {
 	-webkit-touch-callout: $select;
@@ -150,12 +158,19 @@ select:focus
  
 #wrapper>header 
 {
-	height: 70px;
+	transition: height 0.25s;
+	transition-timing-function: cubil-bezier(0,0.5,1,0.5);
+	height: 55px;
 	position: absolute;
 	top: 0;
 	overflow: hidden;
 	font-size: 1.2em;
 	z-index: 1;
+}
+
+#wrapper>header:hover
+{
+	height: 70px;
 }
 
 .hex
@@ -413,9 +428,35 @@ select:focus
 		display: table-cell;
 		height: 350px;
 		vertical-align: middle;
-		@include text-shadow(5px 5px 5px rgba(0, 0, 0, 0.3));
+		@include text-shadow2(0 0 20px rgba(0, 0, 0, 1),0 0 20px rgba(0, 0, 0, 0.5));
 	}
+	/*> div
+	{
+  		line-height:0px;
+  		display:table-cell;
+  		text-align: center;
+		vertical-align: middle;
+ 		color:grey;
+  		font-size: 100px;
+  		-webkit-text-stroke: 1.5px grey;
+  		width: 100%;
+  		
+  		> div
+		{
+  			position:absolute;
+  			width: 100%;
+  			color: rgba(255,255,255,.8);
+  			font-size: 100px;
+  			-webkit-filter: blur(1px);
+  			display:table-cell;
+  			text-align: center;
+			vertical-align: middle;
+  			line-height:0px;
+  			-webkit-text-stroke: 0px transparent;
+		}
+	}*/
 }
+
 .breadcrumbs
 {
 	float: left;
