--- a/templates/fractal/css/stylesheet.scss.css
+++ b/templates/fractal/css/stylesheet.scss.css
@@ -87,12 +87,17 @@ select:focus {
  * Top bar
  */
 #wrapper > header {
-  height: 70px;
+  transition: height 0.25s;
+  transition-timing-function: cubil-bezier(0, 0.5, 1, 0.5);
+  height: 55px;
   position: absolute;
   top: 0;
   overflow: hidden;
   font-size: 1.2em;
   z-index: 1; }
+
+#wrapper > header:hover {
+  height: 70px; }
 
 .hex {
   -webkit-touch-callout: none;
@@ -279,17 +284,42 @@ select:focus {
   background-repeat: no-repeat;
   border-bottom: 5px solid #088a08;
   height: 350px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  	/*> div
+  	{
+    		line-height:0px;
+    		display:table-cell;
+    		text-align: center;
+  		vertical-align: middle;
+   		color:grey;
+    		font-size: 100px;
+    		-webkit-text-stroke: 1.5px grey;
+    		width: 100%;
+    		
+    		> div
+  		{
+    			position:absolute;
+    			width: 100%;
+    			color: rgba(255,255,255,.8);
+    			font-size: 100px;
+    			-webkit-filter: blur(1px);
+    			display:table-cell;
+    			text-align: center;
+  			vertical-align: middle;
+    			line-height:0px;
+    			-webkit-text-stroke: 0px transparent;
+  		}
+  	}*/ }
   .welcome-img div {
     width: 100%;
     text-align: center;
     display: table-cell;
     height: 350px;
     vertical-align: middle;
-    -webkit-text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-    -moz-text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-    -o-text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-    text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); }
+    -webkit-text-shadow: 0 0 20px black, 0 0 20px rgba(0, 0, 0, 0.5);
+    -moz-text-shadow: 0 0 20px black, 0 0 20px rgba(0, 0, 0, 0.5);
+    -o-text-shadow: 0 0 20px black, 0 0 20px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 0 20px black, 0 0 20px rgba(0, 0, 0, 0.5); }
 
 .breadcrumbs {
   float: left;
