--- a/templates/fractal/css/stylesheet.scss.css
+++ b/templates/fractal/css/stylesheet.scss.css
@@ -184,7 +184,7 @@ select:focus {
     color: #fff; }
 
 #usr-nav-reference {
-  transition: width 0.25s;
+  /*transition: width 0.25s;*/
   transition-timing-function: cubil-bezier(0, 0.5, 1, 0.5);
   width: 275px;
   height: 40px;
@@ -254,7 +254,7 @@ select:focus {
  * Main section
  */
 #even-bigger-wrapper {
-  transition: width 0.25s;
+  /*transition: width 0.25s; */
   transition-timing-function: cubil-bezier(0, 0.5, 1, 0.5);
   width: 100%;
   height: 100%;
@@ -571,7 +571,7 @@ select:focus {
  * User sidebar
  */
 #usr-nav {
-  transition: width 0.25s;
+  /*transition: width 0.25s;*/
   transition-timing-function: cubil-bezier(0, 0.5, 1, 0.5);
   width: 0;
   height: 100%;
