--- a/forum/styles/fractal/theme/colours.scss
+++ b/forum/styles/fractal/theme/colours.scss
@@ -27,6 +27,15 @@ hr {
 	border-top-color: $main-colour;
 }
 
+#bottom-bar ul li {
+	border-color: $main-colour;
+}
+
+#bottom-bar span {
+	color: $main-colour;
+}
+
+
 /* Main blocks
 --------------------------------------------- */
 
