--- a/forum/styles/fractal/theme/common.scss
+++ b/forum/styles/fractal/theme/common.scss
@@ -123,6 +123,38 @@ p.right {
 	text-align: right;
 }
 
+#bottom-bar
+{
+	position: absolute;
+	bottom: 0;
+	z-index: 200;
+	width: 100%;
+	background: #fff;
+	font-size: 1.2em;
+	
+	ul
+	{
+		list-style-type: none;
+		width: 100%;
+		
+		li
+		{
+			transition: display 0.25s;
+			padding: 5px;
+			border: 1px solid #333;
+			display: none;
+		}
+	}
+	
+	span
+	{
+		float: right;
+		font-weight: bold;
+		cursor: pointer;
+		color: #333;
+	}
+}
+
 /* Main blocks
 ---------------------------------------- */
 
@@ -184,7 +216,7 @@ body>header {
 	clear: both;
 }
 
-#big-wrapper>footer {
+#footer {
 	width: 80%;
 	margin: 0 auto;
 	clear: both;
