--- a/forum/styles/fractal/template/overall_header.html
+++ b/forum/styles/fractal/template/overall_header.html
@@ -79,6 +79,7 @@
 <script type="text/javascript" src="{T_SUPER_TEMPLATE_PATH}/styleswitcher.js"></script>
 <script type="text/javascript" src="{T_SUPER_TEMPLATE_PATH}/forum_fn.js"></script>
 <script type="text/javascript" src="{T_THEME_PATH}/scripts/main.js"></script> 
+<script type="text/javascript" src="{T_THEME_PATH}/scripts/modernizr.js"></script> 
 
 <link href="{T_THEME_PATH}/print.css" rel="stylesheet" type="text/css" media="print" title="printonly" />
 <link href="{T_STYLESHEET_LINK}" rel="stylesheet" type="text/css" media="screen, projection" />
