--- a/forum/styles/fractal/theme/colours.scss
+++ b/forum/styles/fractal/theme/colours.scss
@@ -889,13 +889,13 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 }
 
 button, input[type="button"], input[type="submit"], input[type="reset"] {
-	background-color: #fff;
+	background-color: #f0f0f0;
 	border-color: $main-colour;
 }
 
-button:hover, input[type="button"]:hover {
+button:hover, input[type="button"]:hover, input[type="submit"]:hover, input[type="reset"]:hover {
 	background-color: $main-colour;
-	color: #fff;
+	color: #f0f0f0;
 }
 
 /* Definition list layout for forms
