--- a/templates/fractal/css/stylesheet.scss.css
+++ b/templates/fractal/css/stylesheet.scss.css
@@ -45,16 +45,16 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
   color: inherit; }
 
 button, input[type="button"] {
-  background: #fff;
+  background: none;
   color: #088a08;
   border: 1px solid #088a08;
-  padding: 3px; }
+  padding: 3px 7px; }
 
 button:hover, input[type="button"]:hover {
   border: none;
-  padding: 4px;
+  padding: 4px 8px;
   background: #088a08;
-  color: #fff;
+  color: #f0f0f0;
   cursor: pointer; }
 
 h1 {
@@ -345,11 +345,11 @@ img {
   clear: both; }
   #system-message > dd {
     text-indent: 0; }
-  #system-message > .error > ul {
+  #system-message > .error > ul, #system-message > .message > ul {
     background-image: none;
     border: none; }
 
-.error.message.fade {
+.error.message.fade, .message.message.fade {
   list-style-type: none;
   color: #000;
   font-size: 14px;
