Added info about using cookies on the site.

--- a/forum/styles/fractal/template/overall_footer.html
+++ b/forum/styles/fractal/template/overall_footer.html
@@ -36,8 +36,8 @@
 
 <div id="bottom-bar">
 	<ul>
-		<li id="cookie-info">This site uses cookies blah blah.<span onclick="hideCookieInfo()">X</span></li>
-		<li id="old-browser-info">It seems that you have outdated browser and the site may not work properly. Please update it to get all of this sites features. If you use Internet Explorer on Windows XP please install other browser.<span onclick="hideOldBrowserInfo()">X</span></li>
+		<li id="cookie-info">We use cookies to improve your experience with the site. If you want to disable them please refer to your web browser's documentation.<span onclick="hideCookieInfo()">X</span></li>
+		<li id="old-browser-info">It seems that you have outdated browser and the site may not work properly. Please update it to get all of the features this site offers. If you use Internet Explorer on Windows XP or older please install other browser.<span onclick="hideOldBrowserInfo()">X</span></li>
 	</ul>
 </div>
 <script type="text/javascript" src="{T_THEME_PATH}/scripts/bottomBar.js"></script> 
