--- a/templates/nexus/css/stylesheet.scss
+++ b/templates/nexus/css/stylesheet.scss
@@ -893,7 +893,6 @@ img
  */
  
 #usr-nav {
-	/*transition: width 0.25s;*/
 	transition-timing-function: cubil-bezier(0,0.5,1,0.5);
 	width: 0;
 	height: 100%; 
@@ -901,19 +900,18 @@ img
 	overflow-y: auto;
 	overflow-x: hidden;
 	position: absolute;
-	/*display: none;*/
 	top: 0;
 	right: 0;
-	/* right: -250px;
-	margin-right: 0px; */
 	background: #4f4f4f;
 	@include box-shadow(-1px 0 1px rgba(0, 0, 0, 0.1));
 	color: #c9c9c9;
 	
 	hr {
-		width: 100%;
-		border: 0;
+		width: calc(100% - 20px);
+		margin-left: 10px;
+		margin-rigth: 10px;
 		height: 1px;
+		@include box-shadow(0px 1px 1px rgba(0,0,0,0.1))
 	}
 }
 
@@ -963,11 +961,12 @@ img
 #usr-nav-name:hover
 {
 	cursor: pointer;
+	background: #444444;
 }
 
-#usr-nav-name:hover .heex
+#usr-nav-name:hover .heex>div
 {
-	margin-right: 10px;
+	border-left-color: #444444;
 }
 
 .sep {
@@ -985,14 +984,10 @@ img
 	height: 100%;
 	overflow-y: auto;
 	overflow-x: hidden;
-	> div
-	{
-		padding: 0 10px;
-	}
 }
 
 .usr-nav-section {
-	padding: 10px 0;
+	padding: 5px 0;
 	width: 100%;
 	font-size: 12px;
 
@@ -1013,7 +1008,7 @@ img
 
 	table {
 		border-collapse: collapse;
-		margin: 10px 0 0 0;
+		margin: 10px 10px 0 10px;
 	}
 
 
@@ -1025,10 +1020,10 @@ img
 		width: 50%;
 	}
 	
-	h3, li, td {
-		height: 18px;
-		span, a {
-			line-height: 18px;
+	h3, li, td, div.more {
+		height: 20px;
+		span {
+			line-height: 20px;
 			display: inline-block;
 			vertical-align: middle;
 		}
@@ -1039,15 +1034,34 @@ img
 		}
 	}
 	
+	li {
+		padding: 0 10px;
+	}
+	
+	li:hover, div.more:hover
+	{
+		background: #444444;
+	}
+	
+	li.nohighlight:hover
+	{
+		background: none;
+	}
+	
+	.cookie-issue {
+		padding: 0 10px;
+	}
+	
 	a:link, a:visited, a:hover, a:active {
 		color: #c9c9c9;
+		text-decoration: none;
 	}
 
 }
 
 .more {
+	margin-top: 5px;
 	text-align: center;
-	padding-top: 10px;
 }
 
 .down-img {
